A better version of ImageSpan support.
No longer have annoying onRestoreInstanceState vs. onCreate
responsibilities.

--- a/demo/res/layout/main.xml
+++ b/demo/res/layout/main.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.commonsware.cwac.richedit.RichEditText xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/editor"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:gravity="left|top"
-	android:imeOptions="flagNoExtractUi"/>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <com.commonsware.cwac.richedit.RichEditText xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/editor"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:freezesText="true"
+        android:gravity="start|top"
+        android:imeOptions="flagNoExtractUi"
+        android:layout_weight="1"/>
+    <ImageButton
+        android:layout_gravity="start"
+        android:id="@+id/insertImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_camera"
+        android:contentDescription="@string/insert_image_content_description"/>
+</LinearLayout>
